# minecraft-rs

./: Cargo.toml  README.md
crates/evenio-plugin/: Cargo.toml
crates/evenio-plugin/src/: lib.rs  plugin.rs
crates/valence_entity/: Cargo.toml  build.rs
crates/valence_entity/src/: active_status_effects.rs  attributes.rs  flags.rs  hitbox.rs  lib.rs  manager.rs  query.rs  tracked_data.rs
crates/valence_protocol/: Cargo.toml
crates/valence_protocol/src/: array.rs  biome_pos.rs  bit_set.rs  block_pos.rs  bounded.rs  byte_angle.rs  chunk_pos.rs  chunk_section_pos.rs  decode.rs  difficulty.rs  direction.rs  encode.rs  game_mode.rs  global_pos.rs  hand.rs  item.rs  lib.rs  profile.rs  raw.rs  sound.rs  var_int.rs  var_long.rs  velocity.rs
crates/valence_protocol/src/impls/: map.rs  math.rs  mod.rs  other.rs  pointer.rs  primitive.rs  sequence.rs  string.rs  tuple.rs
crates/valence_protocol/src/packets/: mod.rs
crates/valence_protocol/src/packets/play/: boss_bar_s2c.rs  player_abilities_s2c.rs  scoreboard_display_s2c.rs  scoreboard_objective_update_s2c.rs
crates/valence_protocol_macros/: Cargo.toml
crates/valence_server_common/: Cargo.toml
crates/valence_server_common/src/: lib.rs  uuid.rs
src/: block.rs  brand.rs  client.rs  event.rs  handshake.rs  legacy_ping.rs  login.rs  main.rs  packet_io.rs  status.rs
src/network/: byte_channel.rs  mod.rs  packet_io.rs
src/network/connect/: handshake.rs  login.rs  mod.rs
