[package]
name = "minecraft-rs"
version.workspace = true
edition.workspace = true

[workspace]
resolver = "2"
members = ["crates/*"]

[workspace.package]
version = "0.1.0"
edition = "2021"

[profile.dev.package."*"]
opt-level = 3

[profile.dev]
opt-level = 1


[dependencies]
evenio.workspace = true
futures = { version = "0.3.30", default-features = false, features = ["executor"] }
hmac = "0.12.1"
md5 = "0.7.0"
rand = "0.8.5"
serde_json = "1.0.116"
sha2 = "0.10.8"
tokio = { version = "1.37.0", features = ["full"] }
derive_more.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
valence_protocol.workspace = true
valence_entity.workspace = true
evenio-plugin.workspace = true
valence_server_common.workspace = true
thiserror.workspace = true
bytes.workspace = true
flume.workspace = true

[workspace.dependencies]
proc-macro2 = "1.0.81"
quote = "1.0.36"
syn = { version = "2.0.60", features = ["full"] }
heck = "0.5.0"
derive_more = { version = "0.99.17", features = ["deref", "deref_mut"] }
anyhow = "1.0.82"
thiserror = "1.0.58"
byteorder = "1.5.0"
bitfield-struct = "0.6.1"
tracing = "0.1.40"
tracing-subscriber = "0.3.18"
bytes = "1.6.0"
uuid = { version = "1.8.0", features = ["v4"] }
serde_json = "1.0.116"
base64 = "0.22.0"
serde = { version = "1.0.198", features = ["derive"] }
url = { version = "2.5.0", features = ["serde"] }
rustc-hash = "1.1.0"
indexmap = "2.2.6"
paste = "1.0.14"
rand = "0.8.5"
flume = "0.11.0"

valence_build_utils = { git = "https://github.com/valence-rs/valence" }
valence_protocol = { path = "crates/valence_protocol", features = ["compression", "encryption"] }
valence_entity = { path = "crates/valence_entity" }
valence_math = { git = "https://github.com/valence-rs/valence" }
valence_protocol_macros = { path = "crates/valence_protocol_macros" }
valence_ident = { git = "https://github.com/valence-rs/valence" }
valence_nbt = { git = "https://github.com/valence-rs/valence", features = ["binary"] }
valence_text = { git = "https://github.com/valence-rs/valence" }
valence_generated = { git = "https://github.com/valence-rs/valence" }
valence_server_common = { path = "crates/valence_server_common" }

evenio = { version = "0.5.0", features = [] }
evenio-plugin = { path = "crates/evenio-plugin" }
