[package]
name = "valence_protocol"
description = "Protocol library for Minecraft: Java Edition"
readme = "README.md"
version.workspace = true
edition.workspace = true

[features]
encryption = ["dep:aes", "dep:cfb8"]
compression = ["dep:flate2"]

[dependencies]
aes = { version = "0.8.4", optional = true }
cfb8 = { version = "0.8.1", optional = true }
flate2 = { version = "1.0.28", optional = true }
derive_more.workspace = true
anyhow.workspace = true
thiserror.workspace = true
byteorder.workspace = true
valence_math.workspace = true
bitfield-struct.workspace = true
tracing.workspace = true
bytes.workspace = true
evenio.workspace = true
valence_protocol_macros.workspace = true
valence_ident.workspace = true
uuid.workspace = true
valence_nbt.workspace = true
valence_text.workspace = true
valence_generated.workspace = true
serde_json.workspace = true
base64.workspace = true
serde.workspace = true
url.workspace = true

[dev-dependencies]
rand = "0.8.5"